# ML-Trading-Strategist

./: .gitignore  MANIFEST.in  Makefile  README.md  app.py  check_data.py  environment.yaml  pyproject.toml  requirements.txt  run.py  run_app.bat  run_app.sh  run_streamlit.ps1  setup.cfg  setup.py
.github/workflows/: demo-smoke.yml
configs/: combined_strategy.yaml  data.yaml  experiment1.yaml  experiment2.yaml  indicators.yaml  manual_strategy_config.yaml  market_sim.yaml  qstrategy.yaml  tree_strategy.yaml
src/TradingStrategist/: __init__.py  evaluate.py  train.py
src/TradingStrategist/data/: __init__.py  check_data.py  download_sp500_data.py  loader.py
src/TradingStrategist/experiments/: __init__.py  experiment1.py  experiment2.py  manual_strategy_evaluation.py
src/TradingStrategist/indicators/: __init__.py  technical.py
src/TradingStrategist/models/: BagLearner.py  ManualStrategy.py  QLearner.py  QStrategyLearner.py  RTLearner.py  TreeStrategyLearner.py  __init__.py
src/TradingStrategist/simulation/: __init__.py  market_sim.py
src/TradingStrategist/utils/: __init__.py  config_utils.py  helpers.py
