[metadata]
name = TradingStrategist
version = 0.1.0
description = Machine learning strategies for algorithmic trading
long_description = file: README.md
long_description_content_type = text/markdown
author = Wes
author_email = your.email@example.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Financial and Insurance Industry
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Office/Business :: Financial :: Investment

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True
install_requires =
    numpy>=1.24.0
    pandas>=2.0.0
    matplotlib>=3.7.0
    scikit-learn>=1.3.0
    pyyaml>=6.0.0
    scipy>=1.10.0

[options.packages.find]
where = src
exclude = tests*, examples*

[options.extras_require]
dev =
    pytest>=7.0.0
    black>=23.0.0
    flake8>=6.0.0
    jupyter>=1.0.0
    isort>=5.0.0
    mypy>=1.0.0
docs =
    sphinx>=7.0.0
    sphinx-rtd-theme>=1.0.0
interactive =
    jupyter>=1.0.0
    ipywidgets>=8.0.0

[options.entry_points]
console_scripts =
    train-strategy = TradingStrategist.train:main
    evaluate-strategy = TradingStrategist.evaluate:main

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist
ignore = E203,W503